--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,7 +9,7 @@
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:gravity="center"
+    android:gravity="bottom"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
     
     <ImageView
@@ -18,6 +18,7 @@
         app:srcCompat="@mipmap/ic_launcher_round"/>
 
     <TextView
+        android:paddingTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"/>
