Synchronizing Screens and Menus with Controller

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-        style="@style/Theme.JokerAppDev.AppbarOverlay"
+        android:theme="@style/Theme.JokerAppDev.AppbarOverlay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            style="@style/Theme.JokerAppDev.PopupOverlay"
+            app:popupTheme="@style/Theme.JokerAppDev.PopupOverlay"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary" />
